# MgmtSays

./: .env.example  .gitignore  Makefile  README.md  README_NEW.md  docker-compose.yml  mgmtsays.db  pyproject.toml  start.py
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  deps.py
backend/src/api/middleware/: __init__.py  cors.py  rate_limit.py
backend/src/api/v1/: __init__.py  analysis.py  companies.py  documents.py  health.py  router.py  search.py  timeline.py
backend/src/config/: __init__.py  logging.py  settings.py
backend/src/db/: __init__.py  base.py  session.py
backend/src/jobs/: __init__.py  processor.py
backend/src/models/db/: __init__.py  analysis.py  company.py  document.py
backend/src/models/domain/: __init__.py  company.py  document.py  evidence.py  initiative.py  insight.py
backend/src/models/schemas/: __init__.py
backend/src/models/schemas/requests/: __init__.py  analysis.py  company.py  document.py
backend/src/models/schemas/responses/: __init__.py  company.py  document.py  insight.py  timeline.py
backend/src/nlp/: __init__.py
backend/src/nlp/chunking/: __init__.py  semantic.py  structural.py
backend/src/nlp/dspy_programs/: __init__.py  base.py  deduplicator.py  initiative_extractor.py  insight_classifier.py  question_answerer.py
backend/src/nlp/indexing/: __init__.py  manager.py  vector_store.py
backend/src/nlp/ingestion/: __init__.py  docx_parser.py  parser.py  pdf_parser.py  pptx_parser.py  text_parser.py  transcript_parser.py
backend/src/nlp/retrieval/: __init__.py  hybrid.py  reranker.py
backend/src/repositories/: __init__.py  analysis_repository.py  base.py  company_repository.py  document_repository.py
backend/src/services/: __init__.py  analysis_service.py  company_service.py  document_service.py  timeline_service.py
backend/src/storage/: __init__.py  base.py  local_storage.py  s3_storage.py
backend/src/utils/: __init__.py  exceptions.py  helpers.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_database.py  test_indexing.py
backend/tests/unit/: test_chunking.py  test_dspy_programs.py  test_parsers.py  test_services.py
docker/db/: init.sql
docker/frontend/: nginx.conf
docs/: IDEA.md  PROJECT_STRUCTURE.md  TASK_BREAKDOWN.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: analysis.ts  client.ts  companies.ts  documents.ts  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Alert.test.tsx  Alert.tsx  Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  EmptyState.tsx  Input.test.tsx  Input.tsx  Spinner.tsx  index.ts
frontend/src/hooks/: index.ts  useAnalysis.ts  useCompanies.ts  useDocuments.ts
frontend/src/pages/: Analysis.tsx  CompanyDetail.tsx  CompanyList.tsx  Dashboard.tsx  DocumentUpload.tsx  Search.tsx  Settings.tsx  Timeline.tsx  index.ts
frontend/src/stores/: companyStore.ts  index.ts  uiStore.ts
frontend/src/test/: setup.ts  utils.tsx
frontend/src/types/: index.ts
