[project]
name = "mgmtsays"
version = "0.1.0"
description = "Management Disclosure Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MgmtSays Team" }]

# Root project dependencies (includes backend deps)
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.19.0",
    
    # LLM & NLP
    "llama-index>=0.10.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "dspy-ai>=2.4.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    
    # Document Processing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "aiofiles>=23.2.0",
    
    # Vector Store
    "chromadb>=0.4.22",
    
    # Validation & Settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    
    # Utilities
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    
    # Linting & Formatting
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    
    # Development
    "pre-commit>=3.6.0",
    "ipython>=8.21.0",
]

[project.scripts]
mgmtsays = "start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-v --cov=backend/src --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
